Fix userid generation + fix preview on mobile and spinner

--- a/deboucled.css
+++ b/deboucled.css
@@ -162,9 +162,10 @@ blockquote .deboucled-highlighted {
 }
 
 .deboucled-preview-spinner {
-  margin: auto;
+  margin: 20px auto;
   display: block;
-  width: 25%;
+  width: 50px;
+  height: 50px;
 }
 .deboucled-topic-subject {
   margin-left: 6px;
@@ -198,7 +199,7 @@ blockquote .deboucled-highlighted {
   cursor: default;
   text-decoration: none;
 }
-.deboucled-topic-preview-col:hover .deboucled-preview-content {
+.deboucled-topic-preview-col.active .deboucled-preview-content {
   display: block;
 }
 .deboucled-topic-title {
@@ -1626,7 +1627,10 @@ select.deboucled-dropdown::-ms-expand {
   }
   .deboucled-topic-preview-col {
     left: 1.7rem;
-    top: 0.9rem;
+    top: 0.7rem;
+  }
+  .deboucled-logo-preview {
+    width: 17px;
   }
   .deboucled-overlay-spinner {
     left: 45%;
